Clean up react->blob bindings * fix responsive scaling * always show blobs but they collapse based on routing

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  position: relative;
   color: white;
 }
 
@@ -33,10 +34,8 @@
 .blobs {
   display: flex;
   justify-content: center;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  height: 100vh;
+  width: 100%;
 }
 
 .App-link {
